# TermRender

./: Cargo.toml  README.md
examples/: Cargo.toml  basics.rs
src/: main.rs
term_render/: Cargo.toml  README.md
term_render/examples/: interactive.rs
term_render/proc_macros/: Cargo.toml
term_render/proc_macros/src/: lib.rs
term_render/src/: event_handler.rs  lib.rs  render.rs  widget.rs  widget_button.rs  widget_dynamic.rs  widget_impls.rs  widget_static.rs  widget_static_text.rs  widget_typing.rs
term_render_macros/: Cargo.toml
term_render_macros/src/: lib.rs
