[package]
name = "term_render"
version = "0.1.0"
edition = "2024"
keywords = ["tui", "terminal", "ui", "widgets"]
authors = ["Andrew"]
description = "A terminal UI library for building rich terminal applications in Rust."
license = "MIT"
categories = ["gui", "terminal-ui"]
repository = "https://github.com/AndrewDMorgan/TermRender"

[lib]
name = "term_render"
path = "src/lib.rs"

[dependencies]
vte = "0.15.0"  # For escape sequence parsing
crossterm = "0.29.0"
crossbeam = "0.8.4"
parking_lot = "0.12.4"
term_render_macros = { path = "../term_render_macros", version = "0.1.0" }
tokio = { version = "1.47.1", features=["io-util", "macros", "rt-multi-thread", "io-std", "time", "fs", "net"] }