[package]
name = "term_render_macros"
version = "0.1.0"
edition = "2024"
keywords = ["proc-macro"]
authors = ["Andrew"]
description = "Procedural Macros for TermRender."
license = "MIT"
categories = ["development-tools::procedural-macro-helpers"]
repository = "https://github.com/AndrewDMorgan/TermRender"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.79", features = ["extra-traits"] }
quote = "1.0.40"